name:            vid-to-auds
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Daniel P Corson <danl@alum.mit.edu>
synopsis:        Separate the audio track of a video file into audio files.
build-type:      Simple
build-depends:
    base
  , directory
  , either-unwrap
  , filepath
  , HSH
  , MissingH

executable:      vid-to-auds
main-is:         VidToAuds.hs
hs-source-dirs:  src
